# ZX2D10GE01R-V4848

./: sdkconfig  sdkconfig.old
components/WT32S3_S1/: CMakeLists.txt  WT32S3_S1.c  idf_component.yml
components/WT32S3_S1/include/: WT32S3_S1.h
components/thermostat_demo/: thermostat_demo.c
components/thermostat_demo/priv_include/: layout.h  screens.h
components/thermostat_demo/screens/: menu_screen.c
components/thermostat_demo/widgets/: simple_button.c
main/: CMakeLists.txt  main.c  screen.c
